// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders a MenuItem properly 1`] = `
.emotion-13 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
  white-space: nowrap;
}

.emotion-13:hover {
  background: #F8F9F9;
}

.emotion-13:active {
  background: #F2F2F2;
}

.emotion-13:focus {
  background: #F8F9F9;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-11 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-5 {
  box-sizing: border-box;
  max-width: calc(100% - 120px - 8px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-1 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-3 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  min-width: 120px;
  overflow: hidden;
}

.emotion-9 {
  box-sizing: border-box;
  overflow: hidden;
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-7 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  max-width: 100%;
  line-height: 0.875rem;
}

<div
  aria-selected={false}
  className="emotion-13 emotion-14"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={false}
>
  <input
    className="emotion-0"
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-11 emotion-6"
    width="100%"
  >
    <div
      className="emotion-5 emotion-6"
    >
      <i
        className="ar ar-symbol-circle emotion-1 emotion-2"
        color="grey"
        fontSize="16px"
      />
      <span
        className="emotion-3 emotion-4"
        color="text.default"
        fontSize="size4"
        overflow="hidden"
      >
        Ready to Clear
      </span>
    </div>
    <div
      className="emotion-9 emotion-6"
      overflow="hidden"
    >
      <span
        className="emotion-7 emotion-4"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </span>
    </div>
  </div>
</div>
`;

exports[`<MenuItem /> renders a selected MenuItem properly 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-11 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-5 {
  box-sizing: border-box;
  max-width: calc(100% - 120px - 8px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-1 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-3 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  min-width: 120px;
  overflow: hidden;
}

.emotion-9 {
  box-sizing: border-box;
  overflow: hidden;
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-7 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  max-width: 100%;
  line-height: 0.875rem;
}

.emotion-13 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
  white-space: nowrap;
  color: #0F0F10;
  font-weight: 700;
}

.emotion-13:hover {
  background: #F8F9F9;
}

.emotion-13:active {
  background: #F2F2F2;
}

.emotion-13:focus {
  background: #F8F9F9;
}

<div
  aria-selected={true}
  className="emotion-13 emotion-14"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={true}
>
  <input
    className="emotion-0"
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-11 emotion-6"
    width="100%"
  >
    <div
      className="emotion-5 emotion-6"
    >
      <i
        className="ar ar-symbol-circle emotion-1 emotion-2"
        color="grey"
        fontSize="16px"
      />
      <span
        className="emotion-3 emotion-4"
        color="text.default"
        fontSize="size4"
        overflow="hidden"
      >
        Ready to Clear
      </span>
    </div>
    <div
      className="emotion-9 emotion-6"
      overflow="hidden"
    >
      <span
        className="emotion-7 emotion-4"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </span>
    </div>
  </div>
</div>
`;
